# src/assistance/api/rest/reports.py
@@ -1,0 +1,7 @@
+
+
+def user():
+    pass
+
+def general():
+    pass
