# src/assistance/api/rest/timetable.py
@@ -1,0 +1,12 @@
+
+def historic():
+    pass
+
+def user():
+    pass
+
+def create():
+    pass
+
+def delete():
+    pass
